--- a/main.html
+++ b/main.html
@@ -4,6 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		body{
+			background-color:yellow;
+			text-align:center;
+		}
+	</style>
 </head>
 
 <body>
@@ -11,6 +17,18 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div>
+		<h1 id="f1">
+			Flowers photos
+		</h1>
+		<p>A rose is a type of shrub, which is known all over the world for its beauty. 2) Roses come in a variety of colours such as yellow, pink, white and red. 3) The rose is seen as a sign of harmony and balance. 4) A red rose is a symbol of love, however, a deep red rose is a symbol of regret and sorrow.</p>
+	</div>
+
+
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>A rose is a type of shrub, which is known all over the world for its beauty. 2) Roses come in a variety of colours such as yellow, pink, white and red. 3) The rose is seen as a sign of harmony and balance. 4) A red rose is a symbol of love, however, a deep red rose is a symbol of regret and sorrow.</p>
+	</div>
 </body>
 
 </html>
